Change GTreeDragNDropAdapter to be a subclass of DragSourceAdapter
GTreeDragNDropAdapter would be better inheriting from a base class with that functionality instead of implementing it

Revert "Change GTreeDragNDropAdapter to be a subclass of DragSourceAdapter"

This reverts commit b05c05347012e0eed51787636ce2045a54d040cb.

F

Revert "Change GTreeDragNDropAdapter to be a subclass of DragSourceAdapter"

This reverts commit 5446dbb539117dc5cc69ea2dd3855b8b7cf53eec.

Optimize