@@ -638,7 +638,7 @@ public class GdbManagerImpl implements GdbManager {
 	@Override
 	public void start(String gdbCmd, String... args) throws IOException {
 		List<String> fullargs = new ArrayList<>();
-		fullargs.addAll(Arrays.asList(gdbCmd));
+		fullargs.addAll(List.of(gdbCmd));
 		fullargs.addAll(Arrays.asList(args));
 
 		state.set(GdbState.STARTING, Causes.UNCLAIMED);
