@@ -7307,7 +7307,7 @@ public class RecoveredClassHelper {
 
 		// add any thunk addresses to the list
 		List<Address> functionAddresses =
-			new ArrayList<Address>(Arrays.asList(functionThunkAddresses));
+			new ArrayList<Address>(List.of(functionThunkAddresses));
 		// add the function itself to the list
 		functionAddresses.add(function.getEntryPoint());
 
