@@ -481,7 +481,7 @@ public class DecompilerProvider extends NavigatableComponentProviderAdapter
 		List<ClangLine> lines = decompilerPanel.getLines();
 		ClangLine line = lines.get(cursor.getRow());
 		ClangToken tokenAtCursor = decompilerPanel.getTokenAtCursor();
-		List<ClangToken> tokens = Arrays.asList(tokenAtCursor);
+		List<ClangToken> tokens = List.of(tokenAtCursor);
         return line.toDebugString(tokens);
 	}
 
