@@ -90,7 +90,7 @@ public class LZ4FrameFileSystem extends GFileSystemBase {
 	@Override
 	public List<GFile> getListing(GFile directory) throws IOException {
 		return (directory == null || directory.equals(root)) && (decompressedLZ4FFile != null)
-				? Arrays.asList(decompressedLZ4FFile)
+				? List.of(decompressedLZ4FFile)
 				: Collections.emptyList();
 	}
 }
