@@ -92,7 +92,7 @@ public class TableChooserDialog<T> extends DialogComponentProvider {
 		}
 
 		T selectedRowObject = gFilterTable.getSelectedRowObject();
-		selectedItems = Arrays.asList(selectedRowObject);
+		selectedItems = List.of(selectedRowObject);
 		close();
 	}
 
