@@ -380,7 +380,7 @@ public class CollectionUtils {
 	 * @return an iterable over the given iterator
 	 */
 	public static <T> Iterable<T> asIterable(T t) {
-		return Arrays.asList(t);
+		return List.of(t);
 	}
 
 	/**
